--- a/views/encuesta.html
+++ b/views/encuesta.html
@@ -24,12 +24,9 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="encuesta.html">Encuesta</a>
-                </li>
+            <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Acerca de</a>
+                    <a class="nav-link" href="AcercaDe.html">Acerca de</a>
                 </li>
             </ul>
         </div>
@@ -38,7 +35,7 @@
     <!-- Section Inicial -->
     <section class="container mt-4">
         <!-- Formulario de la encuesta -->
-        <form action="#" method="post">
+        <form action="#" method="post" class="shadow p-4 bg-white rounded">
             <!-- Pregunta 1 -->
             <div class="form-group">
                 <label for="experiencia">¿Cómo calificarías tu experiencia en la Fiesta de Cuenca?</label>
@@ -72,15 +69,16 @@
             <button type="submit" class="btn btn-primary">Enviar Encuesta</button>
         </form>
     </section>
-        <!-- Footer con redes sociales -->
-<footer class="bg-dark text-light text-center py-3 mt-4">
-  <!-- Agrega aquí tus enlaces a redes sociales -->
-  <p>Síguenos en redes sociales:</p>
-  <!-- Ejemplo de iconos de redes sociales de Bootstrap -->
-  <a href="https://www.facebook.com"><img src="public/img/facebook.png" alt="Facebook" ></a>
-  <a href="https://www.instagram.com"><img src="public/img/instagram.png" alt="Instagram" ></a>
-  <a href="https://twitter.com"><img src="public/img/twitter.png" alt="Twitter"></a>
-</footer>
+
+    <!-- Footer con redes sociales -->
+    <footer class="bg-dark text-light text-center py-3 mt-4">
+        <!-- Agrega aquí tus enlaces a redes sociales -->
+        <p>Síguenos en redes sociales:</p>
+        <!-- Ejemplo de iconos de redes sociales de Bootstrap -->
+        <a href="https://www.facebook.com"><img src="public/img/facebook.png" alt="Facebook" class="footer-icon"></a>
+        <a href="https://www.instagram.com"><img src="public/img/instagram.png" alt="Instagram" class="footer-icon"></a>
+        <a href="https://twitter.com"><img src="public/img/twitter.png" alt="Twitter" class="footer-icon"></a>
+    </footer>
 
     <!-- Agrega las referencias a Bootstrap y jQuery al final del body para mejorar la carga -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
