--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Agrega tu archivo de estilos personalizados si lo tienes -->
     <link rel="stylesheet" href="public/css/estilos.css">
+    <div id="audio-container">
+        <audio id="reproductor" controls>
+            <source src="public/music/ORKAS - Hey You.mp3" type="audio/mp3">
+            Tu navegador no soporta el elemento de audio.
+        </audio>
+        <!-- Botón para detener/reproducir -->
+        <button onclick="toggleMusica()">Detener/Reproducir</button>
+    </div>
 </head>
 
 <body>
@@ -20,7 +28,7 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,10 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="encuesta.html">Encuesta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Acerca de</a>
+                    <a class="nav-link acercade" href="AcercaDe.html">Acerca de</a>
                 </li>
             </ul>
         </div>
@@ -41,42 +52,61 @@
     <section class="container mt-4">
         <div class="row">
             <!-- Article para hablar sobre Cuenca -->
-            <article class="col-md-8">
+            <article class="col-md-4">
                 <h2>Cuenca: Ciudad de Tradiciones</h2>
-                <p>nca es la tercera ciudad más grande de Ecuador y la segunda más importante de la sierra ecuatoriana después de Quito. 
-                    También llamada la ?Atenas del Ecuador? en parte debido a su rica arquitectura, diversidad cultural y su promoción de expresiones 
+                <p>Es la tercera ciudad más grande de Ecuador y la segunda más importante de la sierra ecuatoriana
+                    después de Quito.
+                    También llamada la "Atenas del Ecuador" en parte debido a su rica arquitectura, diversidad cultural
+                    y su promoción de expresiones
                     artísticas Cuenca es el hogar de un orgulloso patrimonio e historia.
                     Santa Ana de los Ríos de Cuenca su independencia fue el 3 de noviembre de 1820.
                     La fecha es considerada feriado nacional. En la ciudad se celebra con diferentes eventos culturales,
                     artísticos e institucionales como
                     ferias de varios tipos, conciertos, desfiles y la connotada "Noche Cuencana" evento de fuegos
                     pirotécnicos y música.</p>
-
             </article>
-            <!-- Aside con imagen e info -->
-            <aside class="col-md-4 text-right">
-                <img src="public/img/cuenca.jpg" alt="Imagen de Cuenca" class="img-fluid">
-                <p>Información adicional sobre Cuenca...</p>
-            </aside>
-
-            <!-- Video de Cuenca -->
-            <div class="embed-responsive embed-responsive-16by9 mt-4">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/UlEuWWNgduM"
-                    allowfullscreen></iframe>
+            <!-- Carrusel de fotos con Bootstrap -->
+            <div id="carrusel" class="carousel slide col-md-8" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="public/img/cuenca.jpg" class="d-block w-100" alt="Imagen 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="public/img/Cuenca1.jpg" class="d-block w-100" alt="Otra Imagen 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="public/img/Cuenca2.jpg" class="d-block w-100" alt="Otra Imagen 2">
+                    </div>
+                    <!-- Agrega más imágenes aquí según sea necesario -->
+                </div>
+                <a class="carousel-control-prev" href="#carrusel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carrusel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
+        </div>
+
+        <!-- Video de Cuenca -->
+        <div class="embed-responsive embed-responsive-16by9 mt-4">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/UlEuWWNgduM"
+                allowfullscreen></iframe>
         </div>
     </section>
 
     <!-- Footer con redes sociales -->
     <!-- Footer con redes sociales -->
-<footer class="bg-dark text-light text-center py-3 mt-4">
-    <!-- Agrega aquí tus enlaces a redes sociales -->
-    <p>Síguenos en redes sociales:</p>
-    <!-- Ejemplo de iconos de redes sociales de Bootstrap -->
-    <a href="https://www.facebook.com"><img src="public/img/facebook.png" alt="Facebook" ></a>
-    <a href="https://www.instagram.com"><img src="public/img/instagram.png" alt="Instagram" ></a>
-    <a href="https://twitter.com"><img src="public/img/twitter.png" alt="Twitter"></a>
-</footer>
+    <footer class="bg-dark text-light text-center py-3 mt-4">
+        <!-- Agrega aquí tus enlaces a redes sociales -->
+        <p>Síguenos en redes sociales:</p>
+        <!-- Ejemplo de iconos de redes sociales de Bootstrap -->
+        <a href="https://www.facebook.com"><img src="public/img/facebook.png" alt="Facebook"></a>
+        <a href="https://www.instagram.com"><img src="public/img/instagram.png" alt="Instagram"></a>
+        <a href="https://twitter.com"><img src="public/img/twitter.png" alt="Twitter"></a>
+    </footer>
 
 
     <!-- Agrega las referencias a Bootstrap y jQuery al final del body para mejorar la carga -->
